test/expected/perr_unterminated_brace_group.out
shit: 2:1: error: Unterminated brace group.
     2 |  { echo hi
       |  ^~ here.
shit: 2:10: note:
     2 |  { echo hi
       |           ^~ Expected '}'.
